[tool.poetry]
name = "Chromium"
version = "0.1.0"
description = ""
authors = ["DevAgility25@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
webbot = "^0.34"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
